# nexus-axiom

./: .gitignore  10_MORE_GAME_CHANGERS.md  10_SOFTWARE_GAME_CHANGERS.md  2_WEEK_DEV_PLAN.md  ACTION_PLAN.md  AI_PROMPTS.md  ALL_10_GAME_CHANGERS.md  ALL_PHASES_COMPLETE.md  BENCHMARKS.md  BENCHMARK_REPORT.md  BRUTAL_HONEST_TRUTH.md  BRUTAL_REALITY_CHECK.md  CHALLENGE.md  CODE_OF_CONDUCT.md  CODE_VERIFICATION_REPORT.md  COMPILATION_STATUS.md  COMPLETE_PROJECT_SUMMARY.md  COMPLETION_SUMMARY.md  COMPREHENSIVE_EDIT_REVIEW.md  CONTRIBUTING.md  CRITICAL_FAKE_ASSETS_REVIEW.md  CRITICAL_FIXES.md  Cargo.toml  Cargo.toml.backup  Dockerfile  EXECUTIVE_SUMMARY.md  EXPLOIT_ZOO.md  FINAL_10_GAME_CHANGERS.md  FINAL_COMPREHENSIVE_AUDIT.md  FINAL_DEEP_REVIEW.md  FINAL_HONEST_REVIEW.md  FINAL_TEST_REPORT.md  FINAL_WORKING_GUIDE.md  FIXES_STATUS.md  FULL_SUMMARY.md  GAME_CHANGERS.md  GAME_CHANGERS_IMPLEMENTATION.md  HONEST_REVIEW_AFTER_EDITS.md  IMMEDIATE_ACTION_PLAN.md  INDEX.md  (+70 more)
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  bug_report.yml  feature_request.md
.github/workflows/: ci.yml  release.yml
assets/: demo.cast
benchmarks/: bench_baseline.c  bench_comprehensive.c  bench_mmap.c  benchmark.sh  benchmark_vs_falco.sh  run_benchmarks.sh
cve_tests/: Makefile  README.md  dirty_pipe.c  pwnkit.c  sudo_heap.c  test_pwnkit  test_pwnkit.c
deploy/kubernetes/: README.md
deploy/kubernetes/helm/: Chart.yaml  values.yaml
docs/: ARCHITECTURE.md  AXIOM_PROTOCOL.md  BUS_FACTOR.md  COEXISTENCE.md  DEPLOYMENT.md  MITRE_ATTACK.md
ebpf/: nexus.bpf.c  nexus_fast.bpf.c  nexus_fixed.bpf.c  nexus_net.bpf.c  nexus_real.bpf.c  nexus_working.bpf.c  run_test.sh  test_wx.c  vmlinux.h  working_lsm.bpf.c
examples/: Makefile  benchmark.sh  run_exploit_zoo.sh  security-policy.yaml  test_mprotect.c  test_pwnkit.c  test_wx_memory.c
helm/nexus-axiom/: Chart.yaml  values.yaml
src/: ai_analyst.rs  autonomous.rs  blockchain.rs  cloud.rs  config.rs  dashboard.rs  ebpf_engine.rs  ebpf_engine.rs.backup  fs_protection.rs  json_logger.rs  main.rs  metrics.rs  net_engine.rs  neural.rs  quantum.rs  real_ebpf.rs  seccomp_engine.rs
src/ai/: context_enforcer.rs  decision_tree.rs  emulation_graph.rs  llm_verdict.rs  mimicry_defense.rs  mod.rs  wasm_engine.rs
src/apex/: enclave_bridge.rs  hardware_fault.rs  hypervisor_attestor.rs  kvm_introspection.rs  mod.rs  scheduler_sentry.rs  smi_detector.rs  stealth_mode.rs  tpm_downgrade.rs
src/core/: activity_mask.rs  btf_resolver.rs  cgroup_freezer.rs  ebpf.rs  forensics.rs  honey_tokens.rs  inode_resolver.rs  io_uring_filter.rs  jit_validator.rs  memory_guard.rs  merkle_signer.rs  mod.rs  release_signing.rs  resource_limits.rs  ring_buffer.rs  sandbox.rs  shadow_vaccinator.rs  static_analysis.rs  succession.rs  sysctl_harden.rs  time_travel.rs  timing_normalizer.rs  xdp_filter.rs
(+10 files in other folders)
