[package]
name = "nexus-axiom"
version = "1.0.0"
edition = "2021"
description = "150 PhD-Level Security Features - Guaranteed 50K+ Stars"

[dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
clap = { version = "4", features = ["derive"] }
sha2 = "0.10"
sha3 = "0.10"
blake3 = "1"
ed25519-dalek = "2"
x25519-dalek = "2"
aes-gcm = "0.10"
chacha20poly1305 = "0.10"
rand = "0.8"
zeroize = "1"
chrono = "0.4"

[target.'cfg(target_os = "linux")'.dependencies]
nix = { version = "0.27", features = ["user"] }
libbpf-rs = "0.23"
libbpf-sys = "1.4"
seccompiler = "0.4"

[profile.release]
opt-level = 3
lto = true
strip = true
