[package]
name = "nexus-axiom"
version = "1.0.0"
edition = "2021"
description = "Real eBPF security that actually kills exploits"
license = "GPL-3.0"
repository = "https://github.com/CoderAwesomeAbhi/nexus-axiom"
keywords = ["security", "ebpf", "lsm", "exploit", "kernel"]
categories = ["os::linux-apis", "development-tools"]

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
env_logger = "0.11"
log = "0.4"
ctrlc = "3"
reqwest = { version = "0.11", features = ["json", "blocking"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }

[target.'cfg(target_os = "linux")'.dependencies]
libbpf-rs = "0.23"
libbpf-sys = "1.4"
nix = { version = "0.27", features = ["user", "signal", "process"] }

[build-dependencies]
libbpf-cargo = "0.23"

[profile.release]
opt-level = 3
lto = true
strip = true
codegen-units = 1
