[package]
name = "nexus-axiom"
version = "1.0.0"
edition = "2021"
description = "Real eBPF security that actually kills exploits"
license = "GPL-3.0"
repository = "https://github.com/CoderAwesomeAbhi/nexus-axiom"
keywords = ["security", "ebpf", "lsm", "exploit", "kernel"]
categories = ["os::linux-apis", "development-tools"]

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
env_logger = "0.11"
log = "0.4"
ctrlc = "3"
reqwest = { version = "0.11", default-features = false, features = ["json", "blocking", "rustls-tls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
lazy_static = "1.4"


chrono = "0.4"

tokio = { version = "1.0", features = ["full"] }

[target.'cfg(target_os = "linux")'.dependencies]
libbpf-rs = "0.23"
libbpf-sys = "1.4"
libseccomp = "0.3"
inotify = "0.10"


nix = { version = "0.27", features = ["user", "signal", "process"] }

[target.'cfg(target_os = "linux")'.build-dependencies]
libbpf-cargo = "0.23"

[profile.release]
opt-level = 3
lto = true
strip = true
codegen-units = 1
